--- a/Application/MVVM/Views/LoadTagsConfigurationWindow.xaml
+++ b/Application/MVVM/Views/LoadTagsConfigurationWindow.xaml
@@ -151,15 +151,15 @@
         </Button>
 
         <Grid Margin="10,20,20,20" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="6">
-            <DataGrid Name="dgUsers" AutoGenerateColumns="False" ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Visible" VerticalAlignment="Stretch" ItemsSource="{Binding Attributes, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+            <DataGrid AutoGenerateColumns="False" ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Visible" VerticalAlignment="Stretch" IsReadOnly="True" ItemsSource="{Binding Attributes}">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Name" Binding="{Binding Name}" />
-                    <DataGridTextColumn Header="InstrumentTag" Binding="{Binding InstrumentTag}" />
+                    <!--<DataGridTextColumn Header="InstrumentTag" Binding="{Binding InstrumentTag}" />
                     <DataGridTextColumn Header="PointType" Binding="{Binding PointType}" />
                     <DataGridTextColumn Header="PointSource" Binding="{Binding PointSource}" />
-                    <DataGridTextColumn Header="Location1" Binding="{Binding Location1}" />
-                    <DataGridTextColumn Header="Zero" Binding="{Binding Zero}" />
-                    <DataGridTextColumn Header="TypicalValue" Binding="{Binding TypicalValue}" />
+                    <DataGridTextColumn Header="Location1" Binding="{Binding Location1}" />-->
+                    <!--<DataGridTextColumn Header="Zero" Binding="{Binding Zero}" />-->
+                    <!--<DataGridTextColumn Header="TypicalValue" Binding="{Binding TypicalValue}" />
                     <DataGridTextColumn Header="Span" Binding="{Binding Span}" />
                     <DataGridTextColumn Header="Compressing" Binding="{Binding Compressing}" />
                     <DataGridTextColumn Header="CompDev" Binding="{Binding CompDev}" />
@@ -170,9 +170,10 @@
                     <DataGridTextColumn Header="ExcMax" Binding="{Binding ExcMax}" />
                     <DataGridTextColumn Header="ExcDevPercent" Binding="{Binding ExcDevPercent}" />
                     <DataGridTextColumn Header="DataSecurity" Binding="{Binding DataSecurity}" />
-                    <DataGridTextColumn Header="PtSecurity" Binding="{Binding PtSecurity}" />
+                    <DataGridTextColumn Header="PtSecurity" Binding="{Binding PtSecurity}" />-->
                 </DataGrid.Columns>
-                <DataGrid.RowDetailsTemplate>
+                
+                <!--<DataGrid.RowDetailsTemplate>
                     <DataTemplate>
                         <DockPanel Background="GhostWhite">
                             <Grid Margin="0,10">
@@ -186,17 +187,10 @@
                                     <RowDefinition Height="Auto" />
                                 </Grid.RowDefinitions>
 
-                                <TextBlock Text="ID: " FontWeight="Bold" />
-                                <TextBlock Text="{Binding Id}" Grid.Column="1" />
-                                <TextBlock Text="Name: " FontWeight="Bold" Grid.Row="1" />
-                                <TextBlock Text="{Binding Name}" Grid.Column="1" Grid.Row="1" />
-                                <TextBlock Text="Birthday: " FontWeight="Bold" Grid.Row="2" />
-                                <TextBlock Text="{Binding Birthday, StringFormat=d}" Grid.Column="1" Grid.Row="2" />
-
                             </Grid>
                         </DockPanel>
                     </DataTemplate>
-                </DataGrid.RowDetailsTemplate>
+                </DataGrid.RowDetailsTemplate>-->
             </DataGrid>
         </Grid>
     </Grid>
