--- a/Application/MVVM/Views/LoadTagsConfigurationWindow.xaml
+++ b/Application/MVVM/Views/LoadTagsConfigurationWindow.xaml
@@ -113,14 +113,14 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="60"/>
-            <RowDefinition Height="25"/>
+            <RowDefinition Height="45"/>
             <RowDefinition Height="25"/>
             <RowDefinition Height="68*" />
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="225*"/>
-            <ColumnDefinition Width="225*"/>
+            <ColumnDefinition Width="10*"/>
             <ColumnDefinition Width="225*"/>
             <ColumnDefinition Width="225*"/>
         </Grid.ColumnDefinitions>
@@ -131,11 +131,15 @@
         <TextBlock Name="textBlock2" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="150,0,0,0" Grid.Row="1" Grid.Column="0" FontSize="16px" Text="{Binding SourceServer, Mode=TwoWay}">
         </TextBlock>
 
-        <RadioButton x:Name="cb1" Grid.Row="1" Grid.Column="1" Margin="5,0,0,0" HorizontalAlignment="Center" 
+
+        <StackPanel Grid.Row="1" Grid.Column="2">
+            <RadioButton x:Name="cb1" Margin="5,0,0,0" HorizontalAlignment="Left" 
             Content="Load with local input files" IsChecked="True" FontSize="14px"/>
 
-        <RadioButton x:Name="cb2" Grid.Row="1" Grid.Column="2" Margin="5,0,0,0" HorizontalAlignment="Left" 
+            <RadioButton x:Name="cb2" Margin="5,0,0,0" HorizontalAlignment="Left" 
             Content="Load all tags not replicated" IsChecked="False" FontSize="14px" />
+        </StackPanel>
+        
 
         <Button Style="{DynamicResource RoundedButtonStyle}" Grid.Row="1" Grid.Column="3"
                 Content="Load Tags"
