PIAttributesUpdateManager amélioration performance + intrumentag

--- a/Application/MVVM/Views/MainWindow.xaml
+++ b/Application/MVVM/Views/MainWindow.xaml
@@ -153,19 +153,21 @@
         <!-- Bottom Bar -->
         <Border Grid.ColumnSpan="3" Grid.Column="1" Grid.Row="4" Background="#d1d8e0" BorderBrush="Black">
 
-            <StackPanel Orientation="Horizontal">
-                <TextBox x:Name="logwindow" Text="{Binding LogTextUpdate, Mode=TwoWay }">
+            <!--<StackPanel Orientation="Horizontal">-->
+            <!--<TextBox x:Name="logwindow" Text="{Binding LogTextUpdate, Mode=TwoWay }">
                     
-                    <!--<RichTextBox.Resources>
+                    -->
+            <!--<RichTextBox.Resources>
 
                     </RichTextBox.Resources>
                     <FlowDocument>
                         <Paragraph FontSize="36">Hello, world!</Paragraph>
                         <Paragraph FontStyle="Italic" TextAlignment="Left" FontSize="14" Foreground="Gray">Thanks to the RichTextBox control, this FlowDocument is completely editable!</Paragraph>
                     </FlowDocument>-->
-                </TextBox>
+            <!--
+                </TextBox>-->
 
-                <Button Grid.Row="3" Grid.Column="2"
+            <Button Grid.Row="3" Grid.Column="2"
                 Content="Next"
                 HorizontalAlignment="Right" 
                 VerticalAlignment="Center"
@@ -176,12 +178,8 @@
                 Foreground="#FFFFFF"
                 Background="#2e86de"
                 Command="{Binding ButtonNextView}">
-                </Button>
-            </StackPanel>
-        </Border>
-
-        <Border Grid.ColumnSpan="3" Grid.Column="1" Grid.Row="4" >
-
+            </Button>
+            <!--</StackPanel>-->
         </Border>
 
         <!-- Content -->
