--- a/Application/MVVM/Views/ConnectionWindow.xaml
+++ b/Application/MVVM/Views/ConnectionWindow.xaml
@@ -217,7 +217,9 @@
                   RenderTransformOrigin="0.5,0.5"
                   SelectedValuePath=""/>
 
-        <Button Grid.Row="1" Grid.Column="2"
+        <Button 
+                x:Name="btn_connect_source"
+                Grid.Row="1" Grid.Column="2"
                 Content="Connect"
                 HorizontalAlignment="Left" 
                 VerticalAlignment="Top"
