--- a/Application/MVVM/Views/MainWindow.xaml
+++ b/Application/MVVM/Views/MainWindow.xaml
@@ -106,7 +106,7 @@
               Grid.Row="2" Grid.RowSpan="3">
             <Grid.RowDefinitions>
                 <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
+                <RowDefinition Height="80" />
                 <RowDefinition Height="50" />
                 <RowDefinition/>
             </Grid.RowDefinitions>
@@ -118,6 +118,7 @@
                    FontWeight="Medium"
                    Foreground="White"
                    Background="#2e86de"
+                   FontSize="12px"
                    Margin="0,20,0,0"/>
             <!--<ListBox Grid.Row="0"
                       ItemsSource="{Binding ConnectionMenuButton}" 
@@ -131,7 +132,10 @@
                    VerticalAlignment="Center"
                    FontWeight="Medium"
                    Foreground="white"
-                   Margin="0,20,0,0"
+                   Background="#2e86de"
+                   FontSize="12px"
+                   Margin="0,0,0,0"
+                   Height="25"
                    Command="{Binding LoadTagsAttributesMenuButton}"/>
             <!--<ListBox Grid.Row="1"
                       ItemsSource="{Binding LoadTagsAttributesMenuButton}" 
@@ -141,10 +145,12 @@
             <Button Grid.Row="2"
                     Content="Push Tags Attributes"
                     HorizontalContentAlignment="Center"
-                    VerticalAlignment="Center"
+                    VerticalAlignment="Top"
                     FontWeight="Medium"
                     Foreground="white"
-                    Margin="0,20,0,0"
+                    Background="#2e86de"
+                    Height="25"
+                    FontSize="12px"
                     Command="{Binding PushTagsAttributesMenuButton}"/>
             <!--<ListBox ItemsSource="{Binding PushTagsAttributes}" 
                       Background="Transparent"
