--- a/Application/MVVM/Views/PushTagsConfigurationWindow.xaml
+++ b/Application/MVVM/Views/PushTagsConfigurationWindow.xaml
@@ -121,8 +121,8 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="225*"/>
             <ColumnDefinition Width="225*"/>
-            <ColumnDefinition Width="225*"/>
-            <ColumnDefinition Width="225*"/>
+            <ColumnDefinition Width="225"/>
+            <ColumnDefinition Width="225"/>
         </Grid.ColumnDefinitions>
 
         <TextBlock Name="textBlock1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="25,0,0,0" Grid.Row="1" Grid.Column="0" FontSize="16px">
@@ -140,7 +140,7 @@
             Content="Create or Update" IsChecked="False" FontSize="14px" />
         </StackPanel>
 
-        <Button Style="{DynamicResource RoundedButtonStyle}" Grid.Row="1" Grid.Column="3"
+        <Button Style="{DynamicResource RoundedButtonStyle}" Grid.Row="1" Grid.Column="2"
                 Content="Update Tags"
                 HorizontalAlignment="Left" 
                 VerticalAlignment="Bottom"
@@ -153,9 +153,9 @@
                 Command="{Binding ButtonUpdateTags}">
         </Button>
 
-        <Button Style="{DynamicResource RoundedButtonStyle}" Grid.Row="1" Grid.Column="3"
+        <Button Style="{DynamicResource RoundedButtonStyle}" Grid.Row="1" Grid.Column="2"
                 Content="Push"
-                HorizontalAlignment="Center" 
+                HorizontalAlignment="Right" 
                 VerticalAlignment="Bottom"
                 Margin="0,0,20,0"
                 Height="25"
@@ -168,7 +168,7 @@
 
         <Button Style="{DynamicResource RoundedButtonStyle}" Grid.Row="1" Grid.Column="3"
                 Content="Exit"
-                HorizontalAlignment="Right" 
+                HorizontalAlignment="Center" 
                 VerticalAlignment="Bottom"
                 Margin="0,0,20,0"
                 Height="25"
