--- a/Application/MVVM/Views/ConnectionWindow.xaml
+++ b/Application/MVVM/Views/ConnectionWindow.xaml
@@ -231,9 +231,9 @@
                 Command="{Binding ButtonConnectSourceServer}">
         </Button>
 
-        <Image Width="35" Grid.Row="1" Grid.Column="3" VerticalAlignment="Top" HorizontalAlignment="Left" Source="/Assets/Cross.png" />
-        <Image Width="35" Grid.Row="1" Grid.Column="3" VerticalAlignment="Top" HorizontalAlignment="Left" Source="/Assets/Check.png" />
-        <Control Style="{StaticResource BusyAnimationStyle}" Margin="0,0,10,0" Grid.Column="3" Grid.Row="1" HorizontalAlignment="Left" Visibility="Hidden" VerticalAlignment="Top" Width="35"/>
+        <Image Width="35" Grid.Row="1" Grid.Column="3" VerticalAlignment="Top" HorizontalAlignment="Left" Source="/Assets/Cross.png" Visibility="Hidden" />
+        <Image Width="35" Grid.Row="1" Grid.Column="3" VerticalAlignment="Top" HorizontalAlignment="Left" Source="/Assets/Check.png" Visibility="Hidden" />
+        <Control Style="{StaticResource BusyAnimationStyle}" Margin="0,0,10,0" Grid.Column="3" Grid.Row="1" HorizontalAlignment="Left" Visibility="Visible" VerticalAlignment="Top" Width="35"/>
 
         <Button Grid.Row="3" Grid.Column="2"
                 Content="Connect"
@@ -247,9 +247,9 @@
                 Command="{Binding ButtonConnectTargetServer}">
         </Button>
 
-        <Image Width="35" Grid.Row="3" Grid.Column="3" VerticalAlignment="Top" HorizontalAlignment="Left" Source="/Assets/Cross.png" Visibility="Visible"/>
-        <Image Width="35" Grid.Row="3" Grid.Column="3" VerticalAlignment="Top" HorizontalAlignment="Left" Source="/Assets/Check.png" Visibility="Visible"/>
-        <Control Style="{StaticResource BusyAnimationStyle}" Margin="0,0,10,0"  Grid.Column="3" Grid.Row="3" HorizontalAlignment="Left" Visibility="Hidden" VerticalAlignment="Top" Width="35"/>
+        <Image Width="35" Grid.Row="3" Grid.Column="3" VerticalAlignment="Top" HorizontalAlignment="Left" Source="/Assets/Cross.png" Visibility="Hidden"/>
+        <Image Width="35" Grid.Row="3" Grid.Column="3" VerticalAlignment="Top" HorizontalAlignment="Left" Source="/Assets/Check.png" Visibility="Hidden"/>
+        <Control Style="{StaticResource BusyAnimationStyle}" Margin="0,0,10,0"  Grid.Column="3" Grid.Row="3" HorizontalAlignment="Left" Visibility="Visible" VerticalAlignment="Top" Width="35"/>
 
     </Grid>
 </UserControl>
