--- a/Application/MVVM/Views/ConnectionWindow.xaml
+++ b/Application/MVVM/Views/ConnectionWindow.xaml
@@ -231,9 +231,9 @@
                 Command="{Binding ButtonConnectSourceServer}">
         </Button>
 
-        <Image Width="25" Height="25" Grid.Row="1" Grid.Column="3" VerticalAlignment="Top" HorizontalAlignment="Left" Source="/Resources/Assets/Cross.png" Visibility="Hidden" />
-        <Image Width="25" Height="25" Grid.Row="1" Grid.Column="3" VerticalAlignment="Top" HorizontalAlignment="Left" Source="/Resources/Assets/Check.png" Visibility="Visible"  />
-        <Control Style="{StaticResource BusyAnimationStyle}" Margin="0,0,10,0" Grid.Column="3" Grid.Row="1" HorizontalAlignment="Left" Visibility="Hidden" VerticalAlignment="Top" Width="35"/>
+        <Image Width="25" Height="25" Grid.Row="1" Grid.Column="3" VerticalAlignment="Top" HorizontalAlignment="Left" Source="/Resources/Assets/Cross.png" Visibility="{Binding SourceKOStatus}"  />
+        <Image Width="25" Height="25" Grid.Row="1" Grid.Column="3" VerticalAlignment="Top" HorizontalAlignment="Left" Source="/Resources/Assets/Check.png" Visibility="{Binding SourceOKStatus}"  />
+        <Control Style="{StaticResource BusyAnimationStyle}" Width="35" Margin="0,0,10,0" Grid.Column="3" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" Visibility="{Binding SourceSpinnerStatus}"/>
 
         <Button Grid.Row="3" Grid.Column="2"
                 Content="Connect"
@@ -247,9 +247,9 @@
                 Command="{Binding ButtonConnectTargetServer}">
         </Button>
 
-        <Image Height="25" Width="25" Grid.Row="3" Grid.Column="3" VerticalAlignment="Top" HorizontalAlignment="Left" Source="/Resources/Assets/Cross.png" Visibility="Visible"/>
-        <Image Height="25" Width="25" Grid.Row="3" Grid.Column="3" VerticalAlignment="Top" HorizontalAlignment="Left" Source="/Resources/Assets/Check.png" Visibility="Visible"/>
-        <Control Style="{StaticResource BusyAnimationStyle}" Margin="0,0,10,0"  Grid.Column="3" Grid.Row="3" HorizontalAlignment="Left" Visibility="Visible" VerticalAlignment="Top"/>
+        <Image Height="25" Width="25" Grid.Row="3" Grid.Column="3" VerticalAlignment="Top" HorizontalAlignment="Left" Source="/Resources/Assets/Cross.png" Visibility="{Binding TargetKOStatus, Mode=TwoWay}"/>
+        <Image Height="25" Width="25" Grid.Row="3" Grid.Column="3" VerticalAlignment="Top" HorizontalAlignment="Left" Source="/Resources/Assets/Check.png" Visibility="{Binding TargetOKStatus, Mode=TwoWay}"/>
+        <Control Style="{StaticResource BusyAnimationStyle}" Margin="0,0,10,0"  Grid.Column="3" Grid.Row="3" HorizontalAlignment="Left"  VerticalAlignment="Top" Visibility="{Binding TargetSpinnerStatus, Mode=TwoWay}" />
 
     </Grid>
 </UserControl>
