--- a/Application/MVVM/Views/ConnectionWindow.xaml
+++ b/Application/MVVM/Views/ConnectionWindow.xaml
@@ -247,9 +247,9 @@
                 Command="{Binding ButtonConnectTargetServer}">
         </Button>
 
-        <Image Height="25" Width="25" Grid.Row="3" Grid.Column="3" VerticalAlignment="Top" HorizontalAlignment="Left" Source="/Resources/Assets/Cross.png" Visibility="{Binding TargetKOStatus, Mode=TwoWay}"/>
-        <Image Height="25" Width="25" Grid.Row="3" Grid.Column="3" VerticalAlignment="Top" HorizontalAlignment="Left" Source="/Resources/Assets/Check.png" Visibility="{Binding TargetOKStatus, Mode=TwoWay}"/>
-        <Control Style="{StaticResource BusyAnimationStyle}" Margin="0,0,10,0"  Grid.Column="3" Grid.Row="3" HorizontalAlignment="Left"  VerticalAlignment="Top" Visibility="{Binding TargetSpinnerStatus, Mode=TwoWay}" />
+        <Image Height="25" Width="25" Grid.Row="3" Grid.Column="3" VerticalAlignment="Top" HorizontalAlignment="Left" Source="/Resources/Assets/Cross.png" Visibility="{Binding TargetKOStatus}"/>
+        <Image Height="25" Width="25" Grid.Row="3" Grid.Column="3" VerticalAlignment="Top" HorizontalAlignment="Left" Source="/Resources/Assets/Check.png" Visibility="{Binding TargetOKStatus}"/>
+        <Control Style="{StaticResource BusyAnimationStyle}" Width="35" Margin="0,0,10,0"  Grid.Column="3" Grid.Row="3" HorizontalAlignment="Left"  VerticalAlignment="Top" Visibility="{Binding TargetSpinnerStatus}" />
 
     </Grid>
 </UserControl>
